--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 
-  <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
   <title>MobileMenu v2.0</title>
   <meta name="description" content="Mobile Menu v2.0 by Rémi Delhaye" />
   <meta name="keywords" content="sliding menu, pushing menu, navigation, responsive, menu, css, jquery" />
@@ -86,7 +86,7 @@
             </ul>
         </div>
         <div for="toggle" class="handle"><span class="left"></span>
- <span class="logo">Mobile Menu </span>
+ <span class="logo">MobileMenu</span>
  <span class="right"></span>
 
         </div>
