--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </ul>
         </div>
         <div for="toggle" class="handle"><span class="left"></span>
- <span class="logo">MobileMenu</span>
+ <span class="logo">v2.0</span>
  <span class="right"></span>
 
         </div>
